--- a/config/services.yaml
+++ b/config/services.yaml
@@ -10,6 +10,10 @@ services:
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+        bind:
+            $apiUrl : '%env(TMDB_URL)%'
+            $apiBearer : '%env(TMDB_JETON)%'
+            $apiKey : '%env(TMDB_KEY)%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -22,3 +26,6 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\Twig\RatingExtension:
+        tags:
+            - name: twig.extension
