--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=production
 APP_SECRET=32492e2181c89a6cfbe0681202a988cb
 ###< symfony/framework-bundle ###
 
@@ -39,6 +39,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-
-###> TMDB ###
 
